--- a/scss/partials/layout/_features.scss
+++ b/scss/partials/layout/_features.scss
@@ -1,8 +1,9 @@
 .features {
     // min-height: 100vh;
-    height: 165vh;
+    height: 175vh;
     position: relative;
     background: linear-gradient(to bottom, $color-secondary -150%, $color-white 100%);
+    overflow: hidden;
 
     @include screen(mobile) {
         height: 190vh;
@@ -98,6 +99,7 @@
         align-items: center;
         justify-content: space-around;
         margin-bottom: 40px;
+        overflow: hidden;
 
         @include screen(big-desktop) {
             width: 30%;
@@ -124,6 +126,18 @@
 
         @include screen(big-desktop) {
             height: 225px;
+        }
+
+        &--slide-in-from-top {
+            animation: slideInFromTop 1s .5s both;
+            -webkit-animation: slideInFromTop 1s .5s both;
+
+
+            // @include screen(big-desktop) {
+            //     animation: slideInFromTop 1s .5s both;
+            //     -webkit-animation: slideInFromTop 1s .5s both;
+            // }
+
         }
 
         &-monitor {
@@ -212,6 +226,11 @@
         @include screen(big-desktop) {
             font-size: $font-size-s;
         }
+
+        // &--slide-in-from-bottom {
+        //     animation: slideInFromBottom .5s .5s both;
+        //     -webkit-animation: slideInFromBottom .5s .5s both;
+        // }
     }
 
     &__text {
@@ -237,6 +256,11 @@
         @include screen(big-desktop) {
             font-size: $font-size-xxs;
             line-height: 1.5;
+        }
+
+        &--slide-in-from-bottom {
+            animation: slideInFromBottom 1s .5s both;
+            -webkit-animation: slideInFromBottom 1s .5s both;
         }
     }
 }
