--- a/css/main.css
+++ b/css/main.css
@@ -2078,8 +2078,12 @@ html {
   width: 45px;
   position: absolute;
   top: 50%;
+  border: none;
+  outline: none;
+  background-color: transparent;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
+  cursor: pointer;
 }
 
 .opinions__arrow-left {
@@ -2164,6 +2168,58 @@ html {
 @media (min-width: 1400px) {
   .opinions__author {
     font-size: 2.2rem;
+  }
+}
+
+.opinions__counter-container {
+  width: 20%;
+  height: 5%;
+  position: absolute;
+  bottom: 4%;
+  left: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(0, 0, 0, 0.65);
+  font-size: 1.6rem;
+  color: #ffffff;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+}
+
+@media (min-width: 360px) {
+  .opinions__counter-container {
+    font-size: 2.2rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .opinions__counter-container {
+    width: 15%;
+    font-size: 2.8rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .opinions__counter-container {
+    font-size: 4rem;
+  }
+}
+
+@media (min-width: 1400px) {
+  .opinions__counter-container {
+    width: 8%;
+    height: 8%;
+    bottom: 6%;
+    font-size: 2.8rem;
   }
 }
 
