--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 @import 'partials/basics/typography';
 @import 'partials/basics/base';
 
+@import 'partials/layout/preloader';
 @import 'partials/layout/navigation';
 @import 'partials/layout/header';
 @import 'partials/layout/about';
